--- a/style.css
+++ b/style.css
@@ -5,3 +5,23 @@
 .active-cyan-2 .fa {
 color: #4dd0e1;
 }
+
+.footer-pos {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+html {
+    position: relative;
+    min-height: 100%;
+}
+ 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background: #000000;
+    color: #FFFFFF;
+}
